--- a/static/dict/common.css
+++ b/static/dict/common.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-/*全局*/
+/*global*/
 html{height: 100%;}
 body{margin: 0;height: 100%;font-size:14px; line-height:160%;color: #666;background-color: #eeeeee}
 body, input, button, select, textarea, h1, h2, h3, h4, h5, h6{font-family:'Helvetica Neue', 'STHeiti', 'Microsoft YaHei', Helvetica,Arial,sans-serif;}
@@ -9,40 +9,56 @@ h1, h2, h3, h4, h5, h6{margin-top:0;font-size:100%;line-height: 1.7;}
 a{cursor: pointer;outline: none;text-decoration: none}
 a:hover{text-decoration: none;}
 a:focus{text-decoration: none;outline: none !important;}
+/*end global*/
 
-/*header nav*/
-header{position:relative;z-index:1001;width:100%;min-height:50px;background-color:#499ef3;}
-header .nav>li>a {
-    color: #fff;
-}
-header .nav>li>a:focus {
-    text-decoration: none;
-    background: #4dabff;
-}
 
-header .nav>li>a:hover {
-    text-decoration: none;
-    background: #4dabff;
-    color: #fff;
+
+/*header*/
+header{
+    position:relative;
+    width:100%;
+    min-height:50px;
+    background-color:#499ef3;
 }
 
-header .nav>li>a:active {
-    color: #e0e0e0;
-    text-decoration: none;
-    background: #4dabff;
-}
 .navbar-brand {
     padding-top: 2px;
+}
+
+#navbar > form input:focus {
+    background: #f4f4f4;
+}
+
+#navbar > ul > li > a {
+    color: #fff;
+}
+
+#navbar ul > li > a:focus, #navbar > ul > li > a:hover, #navbar > ul > li > a:active {
+    text-decoration: none;
+    background: #4dabff;
+    color: #fff;
+}
+#navbar ol > li > a{
+    padding: 0;
+    line-height: 50px;
+    margin: 0 4px;
+}
+#navbar ol > li > a:hover{
+    color: #fff;
 }
 #search {
     width: 300px;
 }
 
 
-.nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
+#navbar .nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
     background-color: #4dabff;
     border-color: #337ab7;
 }
+
+/*end header*/
+
+
 
 /*nb-main leftbar*/
 .nb-main {
@@ -97,7 +113,7 @@ header .nav>li>a:active {
 
 
 /*rightbar*/
-
+/*end rightbar*/
 
 
 /*footer*/
@@ -113,11 +129,21 @@ footer {
     padding: 20px 0;
     margin-top: 20px;
 }
+footer a {
+    color: #fff;
+}
+footer a:hover {
+    color: #fff;
+    font-weight: bold;
+}
 
 /*响应式*/
-/* 超小屏幕（平板，大于等于 768px） */
-@media (min-width: 360px) {
-    header .nav>li>a {
+/* 超小屏幕（平板，大于等于 320px） */
+@media (min-width: 320px) {
+    #navbar ul > li > a {
+        text-align: center;
+    }
+    #navbar ol > li > a {
         text-align: center;
     }
 }
@@ -125,7 +151,10 @@ footer {
 
 /* 小屏幕（平板，大于等于 768px） */
 @media (min-width: 768px) {
-    header .nav>li>a {
+    #navbar ul > li > a {
+        text-align: center;
+    }
+    #navbar ol > li > a {
         text-align: center;
     }
 }
