--- a/template/base.html
+++ b/template/base.html
@@ -156,8 +156,8 @@
         </form>
 
         <ul class="nav navbar-nav">
-            <li><a href="#"><span class="glyphicon glyphicon-home"></span> 首页</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-tower"></span> 话题</a></li>
+            <li><a href="/"><span class="glyphicon glyphicon-home"></span> 首页</a></li>
+            <li><a href="/"><span class="glyphicon glyphicon-tower"></span> 话题</a></li>
         </ul>
 
 
