--- a/template/home.html
+++ b/template/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div style="background-color: #fff; border-radius: 5px; padding: 20px;">
+<div style="background-color: #fff; border-radius: 5px; padding: 20px;min-height:600px;">
     {% for art in userinfo.art %}
         <div class="item">
             <a class="item-img" href="/articles/{{ art.nid }}">
