--- a/template/index.html
+++ b/template/index.html
@@ -48,7 +48,11 @@
             {% end %}
 
                 <div role="tabpanel" class="tab-pane fade in active" id="about">
-                    <div class="index-about">hot</div>
+                    <div class="index-about">
+                        <div style="text-align: center">
+                            小组介绍文章正在创作中
+                        </div>
+                    </div>
                 </div>
 
             </div>
